--- a/axit/scss/page/_awesome.scss
+++ b/axit/scss/page/_awesome.scss
@@ -17,6 +17,9 @@
             }
             h1 {
                 margin: 0;
+                @include ip6plus {
+                    font-size: 20px;
+                }
             }
             .border {
                 margin: 25px auto;
