--- a/axit/scss/page/_pricing-option.scss
+++ b/axit/scss/page/_pricing-option.scss
@@ -2,17 +2,14 @@
     background-color: #f5f5f5;
     padding-top: 100px;
     padding-bottom: 100px;
-    //@include bp-ip6-plus {
-    //    padding: 40px 0;
-    //}
-    //@include bp-ip6 {
-    //    padding: 40px 0;
-    //}
     .container {
         .pricing-option-title {
             text-align: center;
-            h2 {
+            h1 {
                 margin: 0;
+                @include ip6plus {
+                    font-size: 20px;
+                }
             }
             p {
                 color: #97979b;
@@ -119,6 +116,16 @@
                         border-bottom: 2px solid #f5f5f5;
                         padding: 10px 0;
 
+                    }
+                }
+            }
+            @include ip6plus {
+                .col {
+                    display: block;
+                    width: 100%;
+                    margin-bottom: 20px;
+                    .img-pricing {
+                        width: 100%;
                     }
                 }
             }
