--- a/axit/scss/page/_standard-picture.scss
+++ b/axit/scss/page/_standard-picture.scss
@@ -24,9 +24,15 @@
                 .paragraph-bottom {
                     margin-top: 25px;
                 }
+                @include ip6plus {
+                    padding: 0;
+                }
             }
             .standard-img {
                 max-width: 100%;
+                @include  ip6plus {
+                    padding: 0;
+                }
             }
 
         }
