--- a/axit/scss/layout/_header.scss
+++ b/axit/scss/layout/_header.scss
@@ -3,29 +3,137 @@
     position: relative;
     .top-header {
         background-color: #000000;
-        img {
-            float: left;
-            padding: 20px 0;
-        }
-        .menu {
-            float: right;
-            padding: 25px 0;
-            li {
-                a {
-                    color: #848484;;
-                    padding: 0 25px;
-                    @include css3-prefix('transition',0.5s);
-                    &:hover {
-                        background-color: transparent;
-                    }
-                    &:focus {
-                        background-color: transparent;
-                    }
+        .container {
+            img {
+                float: left;
+                padding: 20px 0;
+                @include ip6plus {
+                    padding: 0;
+                    margin: 25px 0;
                 }
+            }
+            .menu {
+                float: right;
+                padding: 25px 0;
+                @include ip6plus {
+                    display: none;
+                }
+            }
+        }
+
+        #nav-icon1 {
+            @include ip6plus {
+                width: 60px;
+                position: relative;
+                //margin: 50px auto;
+                -webkit-transform: rotate(0deg);
+                -moz-transform: rotate(0deg);
+                -o-transform: rotate(0deg);
+                transform: rotate(0deg);
+                -webkit-transition: .5s ease-in-out;
+                -moz-transition: .5s ease-in-out;
+                -o-transition: .5s ease-in-out;
+                transition: .5s ease-in-out;
+                cursor: pointer;
+                margin: 25px 0;
+                float: right;
+            }
+        }
+        #nav-icon1 {
+            span {
+                @include ip6plus {
+                    display: block;
+                    position: absolute;
+                    height: 3px;
+                    width: 73%;
+                    background: #d3531a;
+                    border-radius: 9px;
+                    opacity: 1;
+                    left: 0;
+                    -webkit-transform: rotate(0deg);
+                    -moz-transform: rotate(0deg);
+                    -o-transform: rotate(0deg);
+                    transform: rotate(0deg);
+                    -webkit-transition: .25s ease-in-out;
+                    -moz-transition: .25s ease-in-out;
+                    -o-transition: .25s ease-in-out;
+                    transition: .25s ease-in-out;
+                }
+            }
+        }
+        #nav-icon1 {
+            span:nth-child(1) {
+                @include ip6plus {
+                    top: 0;
+                }
+            }
+
+        }
+        #nav-icon1 {
+            span:nth-child(2) {
+                @include ip6plus {
+                    top: 10px;
+                }
+            }
+
+        }
+        #nav-icon1 {
+            span:nth-child(3) {
+                @include ip6plus {
+                    top: 20px;
+                }
+            }
+
+        }
+        #nav-icon1.open {
+            span:nth-child(1) {
+                @include ip6plus {
+                    top: 9px;
+                    -webkit-transform: rotate(135deg);
+                    -moz-transform: rotate(135deg);
+                    -o-transform: rotate(135deg);
+                    transform: rotate(135deg);
+                }
+            }
+
+        }
+        #nav-icon1.open {
+            span:nth-child(2) {
+                @include ip6plus {
+                    opacity: 0;
+                    left: -60px;
+                }
+            }
+        }
+        #nav-icon1.open {
+            span:nth-child(3) {
+                @include ip6plus {
+                    top: 9px;
+                    -webkit-transform: rotate(-135deg);
+                    -moz-transform: rotate(-135deg);
+                    -o-transform: rotate(-135deg);
+                    transform: rotate(-135deg);
+                }
+            }
+
+        }
+
+
+        li {
+            a {
+                color: #848484;;
+                padding: 0 25px;
+                @include css3-prefix('transition', 0.5s);
                 &:hover {
-                    a {
-                        color: #ffffff;
-                    }
+                    background-color: transparent;
+                }
+                &:focus {
+                    background-color: transparent;
+                }
+            }
+            &:hover {
+                a {
+                    color: #ffffff;
                 }
             }
         }
@@ -52,10 +160,6 @@
                                 margin-bottom: 15px;
 
                             }
-                        }
-                        @include ip6plus {
-                            margin-top: 40px;
-
                         }
 
                         h1, p {
@@ -89,7 +193,7 @@
                             color: #ffffff;
                             border: solid 2px #ffffff;
                             padding: 10px 30px;
-                            @include css3-prefix('transition',0.5s);
+                            @include css3-prefix('transition', 0.5s);
                             &:hover {
                                 background-color: #ffffff;
                                 color: #000000;
@@ -160,7 +264,7 @@
                             width: 100%;
                             max-width: 100%;
                             border-radius: initial;
-                            @include css3-prefix('transition',0.5s);
+                            @include css3-prefix('transition', 0.5s);
                             @include ip6plus {
                                 padding: 10px 0;
                                 font-size: 10px;
@@ -176,39 +280,45 @@
             }
         }
     }
-}
+    .bottom-header {
+        .container {
+            padding: 0;
+            .social-media {
+                float: left;
+                margin: 20px 0;
+                @include ip6plus {
+                    margin: 15px;
+                    padding: 0;
 
-.bottom-header {
-    .container {
-        padding: 0;
-        .social-media {
-            float: left;
-            margin: 20px 0;
-            @include ip6plus {
-                margin: 10px;
+                }
+                h3 {
+                    margin-top: 0;
+                    font-size: 20px;
+                }
+                p {
+                    font-size: 14px;
+                    color: #86878b;
+                    margin-bottom: 0;
+                }
             }
-            h3 {
-                margin-top: 0;
-                font-size: 20px;
-            }
-            p {
-                font-size: 14px;
-                color: #86878b;
-                margin-bottom: 0;
-            }
-        }
-        .img-social {
-            float: right;
-            vertical-align: middle;
-            margin-top: 30px;
-            max-width: 100%;
-            @include ip6plus {
-                margin: 10px 0;
-            }
-            @include ipadpro {
-                margin-top: 50px;
-            }
+            .img-social {
+                float: right;
+                vertical-align: middle;
+                margin-top: 30px;
+                max-width: 100%;
+                @include ipadpro {
+                    margin-top: 50px;
+                }
+                @include ip6plus {
+                    margin: 10px 15px;
+                    padding: 0;
+                    width: 93%;
 
+                }
+
+            }
         }
     }
 }
+
+
