--- a/axit/scss/page/_styllish-axure.scss
+++ b/axit/scss/page/_styllish-axure.scss
@@ -12,6 +12,9 @@
         @include css3-prefix('transform', 'translate(50%, -50%)');
         h1 {
             margin: 0;
+            @include ip6plus {
+                font-size: 20px;
+            }
         }
         p {
             margin: 50px 0 30px 0;
