--- a/axit/css/main.css
+++ b/axit/css/main.css
@@ -3234,6 +3234,15 @@ html, body {
   position: relative; }
   .header .top-header {
     background-color: #000000; }
+    @media only screen and (max-width: 414px) {
+      .header .top-header .container {
+        position: relative;
+        -webkit-transition: 0.5;
+        -khtml-transition: 0.5;
+        -moz-transition: 0.5;
+        -ms-transition: 0.5;
+        -o-transition: 0.5;
+        transition: 0.5; } }
     .header .top-header .container img {
       float: left;
       padding: 20px 0; }
@@ -3246,7 +3255,12 @@ html, body {
       padding: 25px 0; }
       @media only screen and (max-width: 414px) {
         .header .top-header .container .menu {
-          display: none; } }
+          display: none;
+          position: absolute;
+          right: 3%;
+          padding: 35px 0;
+          margin: 0;
+          top: 50%; } }
     @media only screen and (max-width: 414px) {
       .header .top-header #nav-icon1 {
         width: 60px;
