--- a/axit/scss/helpers/_mixins.scss
+++ b/axit/scss/helpers/_mixins.scss
@@ -407,6 +407,12 @@
 
 /// Media-query Breakpoints
 
+@mixin ipad {
+    @media only screen and (max-width: 1024px) {
+        @content;
+    }
+}
+
 @mixin ipadpro {
     @media only screen and (max-width: 768px) {
         @content;
