--- a/axit/scss/page/_standard-picture.scss
+++ b/axit/scss/page/_standard-picture.scss
@@ -8,9 +8,12 @@
         .clearfix {
             .standard-picture-content {
                 padding-right: 50px;
+                padding-top: 25px;
                 h3 {
                     margin: 0;
                     font-size: 20px;
+                    font-family: OpenSans-Bold, sans-serif;
+                    font-weight: bold;
                 }
                 .border {
                     margin: 25px 0;
