--- a/axit/scss/page/_styllish-axure.scss
+++ b/axit/scss/page/_styllish-axure.scss
@@ -10,6 +10,9 @@
         top: 50%;
         right: 50%;
         @include css3-prefix('transform', 'translate(50%, -50%)');
+        @include ip6plus {
+            width: 100%;
+        }
         h1 {
             margin: 0;
             @include ip6plus {
